@@ -1,3 +1,9 @@
+2001-02-02  Patrick Macdonald  <patrickm@redhat.com>
+
+        * cgen.h (CGEN_SYNTAX_CHAR_TYPE): Typedef as unsigned short.
+        (CGEN_MAX_SYNTAX_ELEMENTS): Rename from CGEN_MAX_SYNTAX_BYTES.
+        (CGEN_SYNTAX): Define using CGEN_MAX_SYNTAX_ELEMENTS.
+
 2001-01-24  Karsten Keil  <kkeil@suse.de>
 
 	* i386.h (i386_optab): Fix swapgs
